# casemgtautomation

./: Placeholder.md  README.md  components.json  package-lock.json  package.json  payload.config.ts  vercel.json
.github/workflows-pending/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/(frontend)/: layout.tsx  page.tsx
app/(payload)/: layout.tsx
app/litify/: page.tsx
app/review/: page.tsx
app/worklist/: page.tsx
components/: case-ui.tsx  ui.tsx
components/sidebar-layout/: app-header.tsx  app-sidebar.tsx  sidebar-layout.tsx
components/ui/: sidebar.tsx
fixtures/: genmocks_04_06.py
fixtures/extractions/: mock_record_01_gyn_medication_history.raw.json  mock_record_02_pharmacy_scanned.raw.json  mock_record_03_mixed_records_packet.raw.json  mock_record_04_mri_mrv_radiology.raw.json  mock_record_05_neuro_ophthalmology_followup.raw.json  mock_record_06_urgent_care_fax_scanned.raw.json
fixtures/records/: ground_truth.json
lib/: case-profile.ts  client-pipeline.ts  demo.ts  ingest.ts  matrix.ts  record-grounding.ts  records.ts  supabase.ts
pipeline/: emit_records_sql.py  pyproject.toml
pipeline/casepipe/: __init__.py  annotate.py  casemgt-sonnet-extraction.patch  extract.py  extract_records.py  match.py  matrix.json  record_spec.json  records.py  run.py  score.py  terms.json
pipeline/casepipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
public/demo/: manifest.json  mock_record_01_gyn_medication_history.findings.json  (+11 more)
supabase/: 0001_case_records.sql  0002_seed_case_records.sql  0003_case_scores.sql
(+18 files in other folders)
