[project]
name = "casepipe"
version = "0.1.0"
description = "Case management automation document pipeline"
requires-python = ">=3.11"
dependencies = ["pymupdf>=1.24", "pytesseract>=0.3.10", "rapidfuzz>=3.0", "Pillow>=10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["casepipe*"]

[tool.setuptools.package-data]
casepipe = ["terms.json"]
